--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,7 +51,7 @@
     
     
     <main>
-        <div class="product-row">
+        <div class="product-row hidden">
             <section class="product" data-product-id="1">
                 <img src="product1.jpg" alt="Product 1">
                 <h2>Product 1</h2>
